tests/frontend/fail/array/create_arg_inconsistent_array.act
contract B

contract A

constructor
interface constructor(uint[3] u)


constructor
interface constructor()

creates
  A a := create A([1,2,false])
